--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@import-normalize; /* bring in normalize.css styles */
+/* @import-normalize; /* bring in normalize.css styles */
 
 body {
   margin: 0;
+  padding: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +13,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+ol,
+ul {
+  list-style: none;
+}
+
+div, span {
+  box-sizing: border-box;
 }
